style (collapse): correction du background collapse

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -19,8 +19,10 @@
 .collapse-content {
     width:75%;
     display:flex;
-    justify-content: center;
+    //justify-content: center;
+    padding: 5px;
     align-items: center;
+    background-color: #EFEFEF;
     max-height: 0;
     overflow: hidden;
     transform: translateY(-10px);
@@ -30,7 +32,12 @@
     p{
         color: $color-text;
         font-size: 20px;
-}
+    }
+    li {
+        list-style: none;
+        display: flex;
+        font-size: 20px;
+    }
 }
 .collapse-content.open {
     max-height: 500px;
