--- a/styles/main.scss
+++ b/styles/main.scss
@@ -46,4 +46,6 @@ footer{
     }
     p{
         font-size: 10px;
-        c
+        color: white;
+    }
+}
